sort attribute priority changed, treeSet for stream collectors